Change history
--------------

Release Candidate 3
===================

- Applied Mathias Doenitz's patch fixing MR-265
  "(Re)enable initialization of Controller.AreaName, Controller.Name and Controller.Action before invoking Controller.Initialize()."

- Applied Adam Tybor's patch fixing MR-266
  "Fix for GetErrorSummary() throwing an KeyNotFoundException for SmartDispatch Controller and Binder"

- Fixed MR-260
  "PropertyBag in WizardStep is null when access via key"

- Applied Kyle Marshall's patch fixing MR-261
  "The default ValidatorRegistry is not overriddable in the monorail configuration"

- Add support to BaseControllerTest (well MockRequest actually) for Mocking Url Referer. Patch from Colin Ramsay. 

- Fix SupportsSection implementation in ViewComponent (was comparing section name equality against StringComparer.InvariantCultureIgnoreCase). 
  Also add a SupportsSection implementation to DiggStylePagination. Patches from Tim Haines. 

- Small change to DiggStylePagination to allow supplying querystring parameters in the url. Suggested by kalle.stenflo@gmail.com.

- Applied Tim Haines' patch adding BindObject overloads that accept the AutoLoadBehavior enum, 
  to the ARSmartDispatcherController 

- Changes from Lee Henson to add WizardStep support to TestSupport and provide a Generic BaseControllerTest. 

- Patch from Maruis Marais allowing BuildFormRemoteTag to gracefully degrade when JavaScript is disabled. 

- Patch from Lee Henson fixing regression introduced in 3783 in Prototype Validator. (Could not use hyphens in element id's). 

- Fixed MR-241 
  "When Windsor integration is enabled, the ControllerTree is empty"

- Apply patches from Tim Haynes. 
  "add a renderIfOnlyOnePage property to the DiggStylePagination View Component"
  "Add NewRootInstanceIfInvalidKey AutoloadBehaviour to Castle.MonoRail.ActiveRecordSupport"

- Applied Goodwill's patch adding PersisteFlashFilter and the fValidate's localization support. Fixed MR-246.
