@@ -4,6 +4,9 @@ Change history
 Release Candidate 3
 ===================
 
+- Added ability to customise Next/Prev links in DiggStylePagination.
+   Patch from Markus Zywitza.
+
 - Applied Mathias Doenitz's patch fixing MR-265
   "(Re)enable initialization of Controller.AreaName, Controller.Name and Controller.Action before invoking Controller.Initialize()."
 
